--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -677,7 +677,7 @@ font_size 11.0
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts tall,grid
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
