Replace polybar theme for tokyo night

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,13 +17,13 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = #1a1b26
+background-alt = #24283b
+foreground = #a9b1d6
+primary = #9ece6a
+secondary = #bb9af7
+alert = #f7768e
+disabled = #565f89
 
 [bar/main]
 bottom = true
