--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,1 @@
-*
-*.swp
-!.gitignore
-!README.md
-!awesome/
-!awesome/**/*
-!nvim/
-!nvim/**/*
-nvim/plugin/*
-!kitty/
-!kitty/**/*
-!rofi/
-!rofi/**/*
-!picom/
-!picom/**/*
-!polybar/
-!polybar/**/*
-!gtk-4.0/
-!gtk-4.0/**/*
-!.themes/
-!.themes/**/*
-!Thunar/
-!Thunar/uca.xml
+nvim/plugin/packer_compiled.lua
