kitty: disable bell audio

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,5 +7,7 @@ background_opacity 0.90
 
 confirm_os_window_close 0
 
+enable_audio_bell no
+
 allow_rwmote_control socket-only
 listen_on unix:/tmp/kitty
