--- a/i3/config
+++ b/i3/config
@@ -42,7 +42,7 @@ bindsym $mod+Return exec kitty
 bindsym $mod+o exec opera
 bindsym $mod+Shift+q kill
 
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec rofi -show drun
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
