i3: disable title bars

--- a/i3/config
+++ b/i3/config
@@ -34,6 +34,10 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# Disable title bar
+default_border pixel 1
+default_floating_border pixel 1
+
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
@@ -43,11 +47,6 @@ bindsym $mod+o exec opera
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec rofi -show drun
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 bindsym $mod+h focus left
 bindsym $mod+j focus down
