--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,8 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-exec_always --no-startup-id feh --bg-scale --no-fehbg ~/Pictures/Wallpapers/wallhaven-zygeko.jpg
+# Randomize the wallpaper
+exec_always --no-startup-id feh --bg-scale --no-fehbg --randomize /home/liam/Pictures/Wallpapers/*
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
