--- a/i3/config
+++ b/i3/config
@@ -71,6 +71,7 @@ tiling_drag modifier titlebar
 
 bindsym $mod+Return exec kitty
 bindsym $mod+o exec opera
+bindsym $mod+e exec nautilus
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec rofi -show drun
@@ -90,9 +91,9 @@ bindsym $mod+v split v
 
 bindsym $mod+f fullscreen toggle
 
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+Shift+s layout stacking
+bindsym $mod+Shift+w layout tabbed
+bindsym $mod+Shift+e layout toggle split
 
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
