--- a/i3/config
+++ b/i3/config
@@ -62,6 +62,7 @@ workspace $ws8 output DP-0
 workspace $ws9 output DP-0
 workspace $ws10 output DP-0
 
+assign [class="Steam"] $ws7
 assign [class="chatterino"] $ws10
 assign [class="Spotify"] $ws10
 
@@ -124,7 +125,6 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 mode "resize" {
     bindsym h resize shrink width 10 px or 10 ppt
