--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,7 @@ include themes/tokyo-night.conf
 font_family	JetBrains Mono Nerd Font
 font_size	11.0
 
-background_opacity 0.90
+/* background_opacity 0.90 */
 
 confirm_os_window_close 0
 
