--- a/tmux.conf
+++ b/tmux.conf
@@ -8,11 +8,19 @@ bind r source-file ~/.tmux.conf
 set -g prefix C-a
 
 # Vim-like keymaps
+setw -g xterm-keys on
 setw -g mode-keys vi
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+# Reload config file
+bind-key C-r source-file ~/.tmux.conf
+
+# Use the current working directory for new panes
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -hc "#{pane_current_path}"
 
 # Tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
