--- a/i3/config
+++ b/i3/config
@@ -5,6 +5,7 @@ font pango:JetBrains Mono Nerd Font 8
 exec --no-startup-id dex-autostart --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
+exec --no-startup-id lxpolkit
 
 exec chromium-browser
 exec easyeffects
@@ -129,5 +130,5 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 bar {
-    status_command i3status
+    status_command i3status --config ~/.config/i3/i3status.conf
 }
