--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,7 +5,7 @@ include tokyo_night_night.conf
 
 shell_integration no-rc enabled
 
-allow_rwmote_control socket-only
+allow_remote_control socket-only
 background_opacity 1.0
 confirm_os_window_close 0
 enable_audio_bell no
